Version 0.103 - 25 April 2013 Per Øyvind Karlsen <peroyvind@mandriva.org>

- only install kernel-devel package if proprietary drivers are selected
- fix breakage in display_driver_helper due to missing ']'

Version 0.102 - 31 March 2013 Per Øyvind Karlsen <peroyvind@mandriva.org>

- fix detecting whether X11 is started on boot or not (mga#3618)
- fix enabling of CTRL+ALT+BACKSPACE termination again

Version 0.101 - 25 Februar 2012 Per Øyvind Karlsen <peroyvind@mandriva.org>

- use 'es-latin1' mapping instead of 'es' for asturian (mga#6639)
- keyboardrake:
  o german keyboard: default to variant with enabled deadkeys instead of
    "nodeadkeys variant" (mga#3791)
- display_driver_helper:
  o never select ums for radeon driver, it is not supported by current
    X11 driver anymore

Version 0.100 - 26 December 2012, by Per Øyvind Karlsen <peroyvind@mandriva.org>

- allow to select depth other than 16bit on Poulsbo (mga#5695)
- fix test background (Manuel Hiebel, mga#6349)
- keyboardrake:
  o german keyboard: default to variant with enabled deadkeys instead of
    "nodeadkeys variant" (mga#3791)

Vestion 0.99 - 26 December 2012 akdengi <akdengi>
- if driver radeon use package x11-driver-video-ati
- fix translate

* Thu Nov 27 2012 akdengi <akdengi> 0.97-1
- 0.97
- Change Quit to Apply settings. Really delete xorg.conf for non-proprietary drivers
- Skip test. Not write Xorg.conf, only for proprietary blobs
- Not need detect XAA/EXA - all card since XServer 13 use EXA only
- Use Plug'n'play as default to all. Not need detect oldest devices
- Install kernel-devel-latest if not present in system for current kernel (by uname -r)

Version 0.95 - 16 November 2012 akdengi <akdengi>
- Update alternatives fix. Using /usr/sbin/update-alternatives --set 
directly instead common::function.

Version 0.94 - 12 November 2012 akdengi <akdengi>
- Fix nokmsboot option in Grub2 moving
- Fix ru(winkeys) error

Version 0.93 - 17 August 2012, by Per Øyvind Karlsen <peroyvind@mandriva.org>
